# vixen-rs

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  mise.toml
.claude/: settings.json
.github/: dependabot.yml
.old/: .gitignore  LICENSE  api_test.http
config/: template.env
data/: vixen.db-shm  vixen.db-wal
docker/: .env.example  docker-compose.yml
docs/: DATABASE_CONCURRENCY_TESTS.md  architecture.md  deployment.md  features.md  roadmap.md
migrations/: 20250624021300_schema.sql  README.md  YYYYMMDDHHMMSS_migration_name.sql.template  schema.sql
server/: CLAUDE.md  Cargo.toml  build.rs  rust-toolchain.toml
server/.sqlx/: query-00c64912ff8aa664a12185136e2c958f04847ee00811a28c7816cf2557bb588b.json  query-02012985ab314cc0d8b750401c85d49d8d899e1aae5f8874177bd3c5ab6efb11.json  query-036597213ed2a1ac0cdfd5499f786a7fcf3b58799ba893e3f48273f63b45dc61.json  query-0f6e74b96bf49d7870f2cf231f5b5e1be7cc7324d9ec4039b92bd4ff0034ef64.json  query-0f9f96f7d8de4c131ea9e75d6e48aa5b312d61caae53577e5797f8ad3318e564.json  query-14909f4ed26916fcff57c3b9ecf5c1264aaa9ce8a9c69b667548e8929d2d1878.json  query-163c21d88a4837a38886a9a39fbe5e79dbb64407cb0f8cfd621725b98cb8dd5f.json  query-1c43194816e902b2298baab098cddb4562e8843e0d6e2d0e1e7041d721de52c8.json  query-1fdb7254b39bfb586ade1c6e240a1ce5831e0b883362ddba198ea7b2cbf0769b.json  query-23836667f1b14611ea5cd4391bdcc05af4ccc9a7bac12d67e8489f9b5ff68d3c.json  query-266f53a15d6d659838fec316603f32538bc27ec198bab81f5517ee56f6e57640.json  query-26fe4229686c83e4b1de96fd9b2344669242b8109030ccd778a3d2ee34224c45.json  query-27a72ae55ea14453e311636a4e53ce5f7d648bdbbd1ef35a6680aecb213fc9ba.json  query-2ae549979976233eb1a5a113bd108eca497afd022e7f9fe925d51f452b99fca9.json  query-2c0958c14445b0a582e2d053a50ae629dfba54d2c861aa92e71ab275cf13ccf5.json  query-3b39fae75f9dfba5b15bb093c268856d9156467dad886ac22b21cc3d09f7d710.json  query-3bf3a7ff728859a287b2a8e07b44e12ddbe86c1518147d7c3e2b4af7f89d9879.json  query-413a1dba176f5567c22d06e8b1f71f7cbb6c14f85139d038f997d038e6db065c.json  query-42926efb47104e749f62a9f79c2d9b8682410d21174379336ff5cb0519fce931.json  query-47580f12c708ec7ee86adb4a5286afee8c0d285776cf5168ef88085274bc1548.json  query-532d436c7e709c16c0ee94401d4b7e9f5f225d249a70c7c0b4b27de3fab05f04.json  query-577efdd8db302a6fca47c30e42d9ad6911362c283841a26f9bcf62d83582ef90.json  query-5dd364bbf14d87f499aa459b75b2beeab9f07be22fb879f4d9d321b84de958fa.json  query-5fa9ea8be1c36786fb76e10d346e8ed5eb3184c4d926b1e36c9eec1d68a182ea.json  query-60dc804f74d4fde668252d30cfa70306c2c5191bc37635ce7022333b2d08baef.json  query-64cc348c7c5a467a729d34388b5a7abdf461c1870243c21c5e282f72ab942715.json  query-657247618193051de457160a6a62d8588bb5e3a9554d449b137b9f00bca5e01a.json  query-661889049ea8af779a2d58b8f23a5f588a81a29d5607387dc9e9d853b97240d8.json  query-676d9d994d74ab340a489fee6052c6cffcf470aee4ef50f865fa13522ed015b1.json  query-6d85dc9f1e4ba35722824fb3d6129bc290401a8a18b6429f9e8afbdc5da91a3b.json  query-710526f171e1794dfa175f4f0f1c780fc80ce85c60245729d65f733956a31371.json  query-752370fd145ee8da69002e58fc3e6eb2df15f818c2c67eaecaf0982e9cf4ba29.json  query-757ee49b58efa1a0f9861b80cc297171e22757d15d363e7d823561c0d671a0c1.json  query-762f8ab7701ba96427dc78a4b01a6b7872ec4b1743101b4ff6c0cf0d3dace39c.json  query-7696ceda910e4da1460e2d1766288f11e656245ee2a2704845529e2e6217db11.json  query-80b076b35520d45736ec0325da5d32e9357642e42a2c48a6bb0006c2f83e07b4.json  query-80fa1fc922175b46b9f88bb0c3ed51bd069dce2df820141bd1c258258f5a4663.json  query-82211db245196a9b85bb9c7a827805b58e23e80a17ede516fdbfb0b33002560c.json  query-86c12244ff0ace05187ec74acec9705909ee57939dd6435f1e4d882f715df8e5.json  query-8852779640a07e3f79192da270c69aa5bf334a82213922c4e25e692f4f032665.json  (+20 more)
server/assets/captcha/: CHANGELOG
server/config/: template.env
server/docs/: api.md  architecture.md  auth.md  background-jobs.md  bot.md  captcha.md  config.md  database.md  moderation.md  observability.md  reports.md  spam-detection.md
server/docs/reports/: sample.md
server/docs/rules/: api-routes.md  background-jobs.md  error-handling.md  migrations.md  rust.md  telegram-handlers.md  testing.md
server/migrations/: 20260502000000_initial_schema.down.sql  20260502000000_initial_schema.up.sql  20260502120000_extend_moderation_actions_check.down.sql  20260502120000_extend_moderation_actions_check.up.sql  20260502130000_message_id_to_integer.down.sql  20260502130000_message_id_to_integer.up.sql  20260503000000_m3_reports.down.sql  20260503000000_m3_reports.up.sql
server/src/: build_info.rs  lib.rs
server/src/api/: mod.rs  response.rs  routes_about.rs  routes_health.rs  server.rs  state.rs
server/src/config/: mod.rs  secrets.rs
server/src/database/: mod.rs  postgres.rs  redis.rs  seed.rs
server/src/jobs/: captcha_expiry.rs  daily_report.rs  mod.rs  spam_cleanup.rs
server/src/models/: captcha_challenge.rs  daily_stats.rs  mod.rs  moderation_action.rs  report.rs  report_message.rs  verified_user.rs
server/src/services/: cas_client.rs  chart_service.rs  mod.rs  moderation_service.rs  openai_client.rs  report_render.rs  report_service.rs  summary_service.rs
server/src/services/captcha/: caption.rs  fonts.rs  keyboard.rs  mod.rs  render.rs  service.rs  state.rs
server/src/services/spam/: dedup.rs  mod.rs  normalize.rs  phrases.rs  service.rs
server/src/telegram/: commands.rs  dispatcher.rs  mod.rs
server/src/telegram/handlers/: captcha.rs  commands.rs  member_update.rs  message_gate.rs  mod.rs
server/src/telemetry/: mod.rs
server/src/utils/: mod.rs  redact.rs
server/tests/: captcha.rs  captcha_state.rs  cas_client.rs  daily_stats.rs  handlers_ban.rs  handlers_captcha_callback.rs  handlers_member_update.rs  handlers_message_gate.rs  handlers_report_commands.rs  moderation_service.rs  redis_pubsub.rs  report_message.rs  report_service.rs  spam_cleanup.rs  spam_pipeline.rs  summary_service.rs
server/tests/common/: mod.rs
server/tests/spam_corpus/: README.md  clean_messages.yaml  phrase_match.yaml  xxh3_dedup.yaml
src/: lib.rs
website/: CLAUDE.md
(+102 files in other folders)
