[package]
name = "vixen"
version = "0.1.0"
description = "Telegram bot for automatically banning spammers in Telegram chats"
authors = ["Mike Matiunin <plugfox@gmail.com>"]
license = "MIT"
edition = "2024"

[[bin]]
name = "server"
path = "bin/server.rs"

# cargo run --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]

# Async runtime
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# Utilities
anyhow = "1.0.98"

# Database
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }

# HTTP client
reqwest = {version = "0.12.20", features = ["json"]}

# HTTP server
axum = "0.8.4"

# Configuration
clap = { version = "4.5.40", features = ["derive", "env"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
