[package]
name = "vixen"
version = "0.1.0"
description = "Telegram bot for automatically banning spammers in Telegram chats"
authors = ["Mike Matiunin <plugfox@gmail.com>"]
license = "MIT"
edition = "2024"

# Start server and telegram bot,
# this is the main entry point of the application.
# cargo run --release --bin server
[[bin]]
name = "server"
path = "bin/server.rs"

# Try to generate WebP image with captcha.
# This is used for testing purposes.
# cargo run --release --bin captcha
[[bin]]
name = "captcha"
path = "bin/captcha.rs"

# cargo run --release
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]

# Async runtime
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }

# Utilities
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# Configuration
clap = { version = "4.5.40", features = ["derive", "env"] }

# Database
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# HTTP client (for Telegram Bot API polling)
reqwest = {version = "0.12.20", features = ["json"]}

# HTTP server (for API)
axum = "0.8.4"

# Captcha image generation
#webp = "0.3.0"
#libwebp-sys = { version = "0.12", default-features = false, features = ["parallel"] }
image = { version = "0.25.6", features = ["webp"] }
rusttype = "0.9.3"
rand = "0.9.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
